# YafM

./: .gitignore  README.md  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 12d5e8a5dbdc_create_database.py  51937c40cb46_create_database.py  5db306c69cef_create_database.py  6557fa1eeb97_create_database.py  9db67c02ad72_remove_static_tables.py
app/: config.py  database.py  main.py  middlewareis.py  models.py  utils.py
app/admin/: __init__.py  auth.py  settings.py  views.py
app/routers/: __init__.py  konfrensiya.py  labaratory.py  managments.py  news.py  slider.py  workers.py
app/schemas/: __init__.py  konfrensiya.py  labaratory.py  managments.py  news.py  slider.py
